gen/CMM_BXJParser.java
// Generated from D:/Source_File/For_InteliJ/CMMGrammar/G4\CMM_BXJ.g4 by ANTLR 4.5.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class CMM_BXJParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T_INT=1, T_DOUBLE=2, T_CHAR=3, T_BOOL=4, IF=5, ELSE=6, ELSEIF=7, WHILE=8, 
		BREAK=9, CONTINUE=10, READ=11, WRITE=12, BOOL=13, ID=14, NUM_OP=15, PLUS=16, 
		MINUS=17, COMPARE_OP=18, BOOL_OP=19, CHAR=20, DOUBLE=21, INT=22, LEFT_CURLY=23, 
		RIGHT_CURLY=24, LEFT_PAREN=25, RIGHT_PAREN=26, LEFT_BRACKET=27, RIGHT_BRACKET=28, 
		EQUAL=29, LOGIC_NOT=30, COMMA=31, SEMICOLON=32, PP=33, MM=34, QUOTE=35, 
		ESCAPED_QUOTE=36, MULTI_COMMENT=37, SINGL_COMMENT=38, WS=39, NO_ENTER=40;
	public static final int
		RULE_input = 0, RULE_stat_block = 1, RULE_stat = 2, RULE_declare_stat = 3, 
		RULE_assign_stat = 4, RULE_declare_assign_stat = 5, RULE_read_stat = 6, 
		RULE_write_stat = 7, RULE_if_stat = 8, RULE_while_stat = 9, RULE_break_stat = 10, 
		RULE_cont_stat = 11, RULE_other_stat = 12, RULE_expr = 13, RULE_array_expr = 14, 
		RULE_int_array_expr = 15, RULE_double_array_expr = 16, RULE_char_array_expr = 17, 
		RULE_bool_array_expr = 18, RULE_int_expr = 19, RULE_double_expr = 20, 
		RULE_bool_expr = 21, RULE_char_expr = 22, RULE_type = 23, RULE_array_id = 24, 
		RULE_array_tail = 25;
	public static final String[] ruleNames = {
		"input", "stat_block", "stat", "declare_stat", "assign_stat", "declare_assign_stat", 
		"read_stat", "write_stat", "if_stat", "while_stat", "break_stat", "cont_stat", 
		"other_stat", "expr", "array_expr", "int_array_expr", "double_array_expr", 
		"char_array_expr", "bool_array_expr", "int_expr", "double_expr", "bool_expr", 
		"char_expr", "type", "array_id", "array_tail"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'int'", "'double'", "'char'", "'bool'", "'if'", "'else'", "'else if'", 
		"'while'", "'break'", "'continue'", "'read'", "'write'", null, null, null, 
		"'+'", "'-'", null, null, null, null, null, "'{'", "'}'", "'('", "')'", 
		"'['", "']'", "'='", "'!'", "','", "';'", "'++'", "'--'", "'\"'", "'\\\"'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "T_INT", "T_DOUBLE", "T_CHAR", "T_BOOL", "IF", "ELSE", "ELSEIF", 
		"WHILE", "BREAK", "CONTINUE", "READ", "WRITE", "BOOL", "ID", "NUM_OP", 
		"PLUS", "MINUS", "COMPARE_OP", "BOOL_OP", "CHAR", "DOUBLE", "INT", "LEFT_CURLY", 
		"RIGHT_CURLY", "LEFT_PAREN", "RIGHT_PAREN", "LEFT_BRACKET", "RIGHT_BRACKET", 
		"EQUAL", "LOGIC_NOT", "COMMA", "SEMICOLON", "PP", "MM", "QUOTE", "ESCAPED_QUOTE", 
		"MULTI_COMMENT", "SINGL_COMMENT", "WS", "NO_ENTER"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "CMM_BXJ.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public CMM_BXJParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class InputContext extends ParserRuleContext {
		public List<StatContext> stat() {
			return getRuleContexts(StatContext.class);
		}
		public StatContext stat(int i) {
			return getRuleContext(StatContext.class,i);
		}
		public InputContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_input; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CMM_BXJListener ) ((CMM_BXJListener)listener).enterInput(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CMM_BXJListener ) ((CMM_BXJListener)listener).exitInput(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CMM_BXJVisitor ) return ((CMM_BXJVisitor<? extends T>)visitor).visitInput(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InputContext input() throws RecognitionException {
		InputContext _localctx = new InputContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_input);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(55);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T_INT) | (1L << T_DOUBLE) | (1L << T_CHAR) | (1L << T_BOOL) | (1L << IF) | (1L << WHILE) | (1L << BREAK) | (1L << CONTINUE) | (1L << READ) | (1L << WRITE) | (1L << ID))) != 0)) {
				{
				{
				setState(52);
				stat();
				}
				}
				setState(57);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Stat_blockContext extends ParserRuleContext {
		public TerminalNode LEFT_CURLY() { return getToken(CMM_BXJParser.LEFT_CURLY, 0); }
		public TerminalNode RIGHT_CURLY() { return getToken(CMM_BXJParser.RIGHT_CURLY, 0); }
		public List<StatContext> stat() {
			return getRuleContexts(StatContext.class);
		}
		public StatContext stat(int i) {
			return getRuleContext(StatContext.class,i);
		}
		public Stat_blockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stat_block; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CMM_BXJListener ) ((CMM_BXJListener)listener).enterStat_block(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CMM_BXJListener ) ((CMM_BXJListener)listener).exitStat_block(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CMM_BXJVisitor ) return ((CMM_BXJVisitor<? extends T>)visitor).visitStat_block(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Stat_blockContext stat_block() throws RecognitionException {
		Stat_blockContext _localctx = new Stat_blockContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_stat_block);
		int _la;
		try {
			setState(67);
			switch (_input.LA(1)) {
			case LEFT_CURLY:
				enterOuterAlt(_localctx, 1);
				{
				setState(58);
				match(LEFT_CURLY);
				setState(62);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T_INT) | (1L << T_DOUBLE) | (1L << T_CHAR) | (1L << T_BOOL) | (1L << IF) | (1L << WHILE) | (1L << BREAK) | (1L << CONTINUE) | (1L << READ) | (1L << WRITE) | (1L << ID))) != 0)) {
					{
					{
					setState(59);
					stat();
					}
					}
					setState(64);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(65);
				match(RIGHT_CURLY);
				}
				break;
			case T_INT:
			case T_DOUBLE:
			case T_CHAR:
			case T_BOOL:
			case IF:
			case WHILE:
			case BREAK:
			case CONTINUE:
			case READ:
			case WRITE:
			case ID:
				enterOuterAlt(_localctx, 2);
				{
				setState(66);
				stat();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatContext extends ParserRuleContext {
		public Assign_statContext assign_stat() {
			return getRuleContext(Assign_statContext.class,0);
		}
		public TerminalNode SEMICOLON() { return getToken(CMM_BXJParser.SEMICOLON, 0); }
		public Read_statContext read_stat() {
			return getRuleContext(Read_statContext.class,0);
		}
		public Write_statContext write_stat() {
			return getRuleContext(Write_statContext.class,0);
		}
		public If_statContext if_stat() {
			return getRuleContext(If_statContext.class,0);
		}
		public While_statContext while_stat() {
			return getRuleContext(While_statContext.class,0);
		}
		public Declare_statContext declare_stat() {
			return getRuleContext(Declare_statContext.class,0);
		}
		public Declare_assign_statContext declare_assign_stat() {
			return getRuleContext(Declare_assign_statContext.class,0);
		}
		public Break_statContext break_stat() {
			return getRuleContext(Break_statContext.class,0);
		}
		public Cont_statContext cont_stat() {
			return getRuleContext(Cont_statContext.class,0);
		}
		public Other_statContext other_stat() {
			return getRuleContext(Other_statContext.class,0);
		}
		public StatContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stat; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CMM_BXJListener ) ((CMM_BXJListener)listener).enterStat(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CMM_BXJListener ) ((CMM_BXJListener)listener).exitStat(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CMM_BXJVisitor ) return ((CMM_BXJVisitor<? extends T>)visitor).visitStat(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatContext stat() throws RecognitionException {
		StatContext _localctx = new StatContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_stat);
		try {
			setState(95);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(69);
				assign_stat();
				setState(70);
				match(SEMICOLON);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(72);
				read_stat();
				setState(73);
				match(SEMICOLON);
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(75);
				write_stat();
				setState(76);
				match(SEMICOLON);
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(78);
				if_stat();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(79);
				while_stat();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(80);
				declare_stat();
				setState(81);
				match(SEMICOLON);
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(83);
				declare_assign_stat();
				setState(84);
				match(SEMICOLON);
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(86);
				break_stat();
				setState(87);
				match(SEMICOLON);
				}
				break;
			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(89);
				cont_stat();
				setState(90);
				match(SEMICOLON);
				}
				break;
			case 10:
				enterOuterAlt(_localctx, 10);
				{
				setState(92);
				other_stat();
				setState(93);
				match(SEMICOLON);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Declare_statContext extends ParserRuleContext {
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public List<TerminalNode> ID() { return getTokens(CMM_BXJParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(CMM_BXJParser.ID, i);
		}
		public List<Array_idContext> array_id() {
			return getRuleContexts(Array_idContext.class);
		}
		public Array_idContext array_id(int i) {
			return getRuleContext(Array_idContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(CMM_BXJParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(CMM_BXJParser.COMMA, i);
		}
		public Declare_statContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declare_stat; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CMM_BXJListener ) ((CMM_BXJListener)listener).enterDeclare_stat(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CMM_BXJListener ) ((CMM_BXJListener)listener).exitDeclare_stat(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CMM_BXJVisitor ) return ((CMM_BXJVisitor<? extends T>)visitor).visitDeclare_stat(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Declare_statContext declare_stat() throws RecognitionException {
		Declare_statContext _localctx = new Declare_statContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_declare_stat);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(97);
			type();
			setState(100);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				{
				setState(98);
				match(ID);
				}
				break;
			case 2:
				{
				setState(99);
				array_id();
				}
				break;
			}
			setState(109);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(102);
				match(COMMA);
				setState(105);
				switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
				case 1:
					{
					setState(103);
					match(ID);
					}
					break;
				case 2:
					{
					setState(104);
					array_id();
					}
					break;
				}
				}
				}
				setState(111);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Assign_statContext extends ParserRuleContext {
		public TerminalNode EQUAL() { return getToken(CMM_BXJParser.EQUAL, 0); }
		public TerminalNode ID() { return getToken(CMM_BXJParser.ID, 0); }
		public Array_idContext array_id() {
			return getRuleContext(Array_idContext.class,0);
		}
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public Array_exprContext array_expr() {
			return getRuleContext(Array_exprContext.class,0);
		}
		public Assign_statContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assign_stat; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CMM_BXJListener ) ((CMM_BXJListener)listener).enterAssign_stat(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CMM_BXJListener ) ((CMM_BXJListener)listener).exitAssign_stat(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CMM_BXJVisitor ) return ((CMM_BXJVisitor<? extends T>)visitor).visitAssign_stat(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Assign_statContext assign_stat() throws RecognitionException {
		Assign_statContext _localctx = new Assign_statContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_assign_stat);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(114);
			switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
			case 1:
				{
				setState(112);
				match(ID);
				}
				break;
			case 2:
				{
				setState(113);
				array_id();
				}
				break;
			}
			setState(116);
			match(EQUAL);
			setState(119);
			switch (_input.LA(1)) {
			case BOOL:
			case ID:
			case MINUS:
			case CHAR:
			case DOUBLE:
			case INT:
			case LEFT_PAREN:
			case LOGIC_NOT:
				{
				setState(117);
				expr();
				}
				break;
			case LEFT_CURLY:
			case QUOTE:
				{
				setState(118);
				array_expr();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Declare_assign_statContext extends ParserRuleContext {
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public List<TerminalNode> ID() { return getTokens(CMM_BXJParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(CMM_BXJParser.ID, i);
		}
		public List<TerminalNode> EQUAL() { return getTokens(CMM_BXJParser.EQUAL); }
		public TerminalNode EQUAL(int i) {
			return getToken(CMM_BXJParser.EQUAL, i);
		}
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(CMM_BXJParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(CMM_BXJParser.COMMA, i);
		}
		public List<Array_idContext> array_id() {
			return getRuleContexts(Array_idContext.class);
		}
		public Array_idContext array_id(int i) {
			return getRuleContext(Array_idContext.class,i);
		}
		public List<Array_exprContext> array_expr() {
			return getRuleContexts(Array_exprContext.class);
		}
		public Array_exprContext array_expr(int i) {
			return getRuleContext(Array_exprContext.class,i);
		}
		public Declare_assign_statContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declare_assign_stat; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CMM_BXJListener ) ((CMM_BXJListener)listener).enterDeclare_assign_stat(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CMM_BXJListener ) ((CMM_BXJListener)listener).exitDeclare_assign_stat(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CMM_BXJVisitor ) return ((CMM_BXJVisitor<? extends T>)visitor).visitDeclare_assign_stat(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Declare_assign_statContext declare_assign_stat() throws RecognitionException {
		Declare_assign_statContext _localctx = new Declare_assign_statContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_declare_assign_stat);
		int _la;
		try {
			setState(155);
			switch ( getInterpreter().adaptivePredict(_input,15,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(121);
				type();
				setState(122);
				match(ID);
				setState(125);
				_la = _input.LA(1);
				if (_la==EQUAL) {
					{
					setState(123);
					match(EQUAL);
					setState(124);
					expr();
					}
				}

				setState(135);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COMMA) {
					{
					{
					setState(127);
					match(COMMA);
					setState(128);
					match(ID);
					setState(131);
					_la = _input.LA(1);
					if (_la==EQUAL) {
						{
						setState(129);
						match(EQUAL);
						setState(130);
						expr();
						}
					}

					}
					}
					setState(137);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(138);
				type();
				setState(139);
				array_id();
				setState(142);
				_la = _input.LA(1);
				if (_la==EQUAL) {
					{
					setState(140);
					match(EQUAL);
					setState(141);
					array_expr();
					}
				}

				setState(152);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COMMA) {
					{
					{
					setState(144);
					match(COMMA);
					setState(145);
					array_id();
					setState(148);
					_la = _input.LA(1);
					if (_la==EQUAL) {
						{
						setState(146);
						match(EQUAL);
						setState(147);
						array_expr();
						}
					}

					}
					}
					setState(154);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Read_statContext extends ParserRuleContext {
		public TerminalNode READ() { return getToken(CMM_BXJParser.READ, 0); }
		public TerminalNode LEFT_PAREN() { return getToken(CMM_BXJParser.LEFT_PAREN, 0); }
		public TerminalNode RIGHT_PAREN() { return getToken(CMM_BXJParser.RIGHT_PAREN, 0); }
		public TerminalNode ID() { return getToken(CMM_BXJParser.ID, 0); }
		public Array_idContext array_id() {
			return getRuleContext(Array_idContext.class,0);
		}
		public Read_statContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_read_stat; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CMM_BXJListener ) ((CMM_BXJListener)listener).enterRead_stat(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CMM_BXJListener ) ((CMM_BXJListener)listener).exitRead_stat(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CMM_BXJVisitor ) return ((CMM_BXJVisitor<? extends T>)visitor).visitRead_stat(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Read_statContext read_stat() throws RecognitionException {
		Read_statContext _localctx = new Read_statContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_read_stat);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(157);
			match(READ);
			setState(158);
			match(LEFT_PAREN);
			setState(161);
			switch ( getInterpreter().adaptivePredict(_input,16,_ctx) ) {
			case 1:
				{
				setState(159);
				match(ID);
				}
				break;
			case 2:
				{
				setState(160);
				array_id();
				}
				break;
			}
			setState(163);
			match(RIGHT_PAREN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Write_statContext extends ParserRuleContext {
		public TerminalNode WRITE() { return getToken(CMM_BXJParser.WRITE, 0); }
		public TerminalNode LEFT_PAREN() { return getToken(CMM_BXJParser.LEFT_PAREN, 0); }
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public TerminalNode RIGHT_PAREN() { return getToken(CMM_BXJParser.RIGHT_PAREN, 0); }
		public List<TerminalNode> COMMA() { return getTokens(CMM_BXJParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(CMM_BXJParser.COMMA, i);
		}
		public Write_statContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_write_stat; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CMM_BXJListener ) ((CMM_BXJListener)listener).enterWrite_stat(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CMM_BXJListener ) ((CMM_BXJListener)listener).exitWrite_stat(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CMM_BXJVisitor ) return ((CMM_BXJVisitor<? extends T>)visitor).visitWrite_stat(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Write_statContext write_stat() throws RecognitionException {
		Write_statContext _localctx = new Write_statContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_write_stat);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(165);
			match(WRITE);
			setState(166);
			match(LEFT_PAREN);
			setState(167);
			expr();
			setState(172);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(168);
				match(COMMA);
				setState(169);
				expr();
				}
				}
				setState(174);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(175);
			match(RIGHT_PAREN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
